projects: avoid horizontal scrolling in code
This makes an effort to avoid the need for horizontal scrolling in the
code examples without making the column wider or the font too small.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -69,7 +69,8 @@ ol ol ol li {
 
 div.highlighter-rouge,
 figure.highlight {
-    border-style: solid;
+    border: 1px solid black;
+    font-size: 0.65em; // allows 70 columns without horizontal scrolling
 }
 
 kbd {
